--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@ body {
   padding: 0;
 }
 
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 1em;
+}
+
 h1 {
   margin-top: 1em;
+  font-size: 2.5em;
 }
 
 #startStopBtn {
@@ -19,77 +26,78 @@ h1 {
   border: none;
   border-radius: 0.3em;
   transition: all 0.3s;
-  width: 10em;
-  height: 3em;
-  line-height: 3em;
+  width: 12em;
+  height: 3.5em;
+  line-height: 3.5em;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 #startStopBtn:hover { background-color: #0056b3; }
 #startStopBtn.running { background-color: #dc3545; }
-#startStopBtn:before { content: "Start"; }
+#startStopBtn:before { content: "Start Test"; }
 #startStopBtn.running:before { content: "Abort"; }
 
-#test { margin-top: 2em; margin-bottom: 4em; }
+#test {
+  margin-top: 2em;
+  margin-bottom: 4em;
+}
+
 div.testArea {
   display: inline-block;
-  width: 14em;
-  height: 9em;
+  width: 180px;
+  height: 120px;
   position: relative;
+  box-sizing: border-box;
   margin: 1em;
   background: #fff;
   border-radius: 0.5em;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   padding: 1em;
 }
+
 div.testName {
-  position: absolute;
-  top: 0.5em; left: 0;
-  width: 100%;
   font-size: 1.2em;
   color: #555;
+  margin-bottom: 0.5em;
 }
-div.meterText {
-  position: absolute;
-  bottom: 2.5em; left: 0;
-  width: 100%;
-  font-size: 2em;
-  z-index: 9;
-  color: #007bff;
-}
-#dlText { color: #007bff; }
-#ulText { color: #28a745; }
-#pingText,#jitText { color: #dc3545; }
 
-div.unit {
-  position: absolute;
-  bottom: 1.5em; left: 0;
-  width: 100%;
-  color: #777;
+div.meterText {
+  font-size: 2em;
+  color: #007bff;
+  margin-bottom: 0.5em;
 }
 
 .progress-container {
-  position: absolute;
-  bottom: 0.5em;
-  left: 0;
   width: 100%;
-  height: 0.6em;
+  height: 8px;
   background: #e0e0e0;
-  border-radius: 0.3em;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-bottom: 0.5em;
 }
 
 .progress-bar {
   height: 100%;
   width: 0%;
-  background: #007bff;
-  border-radius: 0.3em;
+  background-color: #007bff;
   transition: width 0.2s;
 }
 
-#speedMessage {
-  margin-top: 1em;
+.unit {
+  color: #777;
+  font-size: 0.9em;
+}
+
+.testGroup {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.testConclusion {
   font-size: 2em;
   font-weight: bold;
+  margin-top: 1em;
 }
 
 #ipArea {
@@ -97,6 +105,12 @@ div.unit {
   color: #555;
 }
 
-@media all and (max-width:40em){
-  div.testArea { display:block; margin:1em auto; }
+@media (max-width:600px) {
+  div.testArea {
+    width: 140px;
+    height: 110px;
+    margin: 0.8em;
+  }
+  h1 { font-size: 2em; }
+  #startStopBtn { width: 10em; height: 3em; line-height: 3em; font-size: 1em; }
 }
